--- a/layouts/_partials/footer.html
+++ b/layouts/_partials/footer.html
@@ -1,1 +1,1 @@
-©2025 Nasu Rei of the Federation of Glue Drinker's Assosciation
+© Copyright 2025 Nasu Rei of the F.O.G.D (Federation of Glue Drinkers)
