--- a/assets/main.css
+++ b/assets/main.css
@@ -238,6 +238,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
   line-height: 1.25;
   color: var(--txt-color);
+  border-bottom: 1px solid #d0d7de;
+  padding-bottom: 0.3em;
+  margin-bottom: 16px;
 }
 /*
 h1 {
