--- a/layouts/_partials/head.html
+++ b/layouts/_partials/head.html
@@ -87,4 +87,5 @@ localStorage.setItem('theme', 'dark');
 {{ template "_internal/opengraph.html" . -}}
 {{ template "_internal/twitter_cards.html" . }}
 {{ template "_internal/schema.html" . }}
+<link rel="stylesheet" type="text/css" media="screen" href="{{ "css/markdown-overrides.css" | relURL }}">
 </head>
