--- a/static/css/Markdown.css
+++ b/static/css/Markdown.css
@@ -1,3 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant&display=swap');
+
+@font-face {
+  font-family: 'Bookerly Display';
+  font-display: auto;
+  font-style:  normal;
+  font-weight: 400;
+  src: local('Bookerly Display'), url('fonts/bookerly/Bookerly Display.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Bookerly Display Bold';
+  font-display: auto;
+  font-style:  normal;
+  font-weight: 600;
+  src: local('Bookerly Display'), url('fonts/bookerly/Bookerly Display Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Bookerly Display Italic';
+  font-display: auto;
+  font-style:  italic;
+  font-weight: 400;
+  src: local('Bookerly Display'), url('fonts/bookerly/Bookerly Display Italic.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Bookerly Display Bold Italic';
+  font-display: auto;
+  font-style:  italic;
+  font-weight: 600;
+  src: local('Bookerly Display'), url('fonts/bookerly/Bookerly Display Bold Italic.ttf') format('truetype');
+}
+
 @font-face {
   font-family: 'Roboto Regular';
   font-display: auto;
@@ -94,9 +128,9 @@ html {
 }
 
 body {
-  font-family: "Roboto Regular", serif;
+  font-family: "Bookerly Display", serif;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 1.3em;
   color: var(--txt-color);
   line-height: 1.6rem;
   max-width: 800px;
@@ -124,7 +158,7 @@ header nav li {
 }
 
 footer {
-  font-family: "Roboto Slab Regular", serif;
+  font-family: "Bookerly Display Italic", serif;
   text-align: right;
   font-size: 0.75em;
   border-top: 1px solid var(--line-color);
@@ -145,7 +179,7 @@ html,button,input,select,textarea {
 }
 
 b, strong {
-  font-family: "Roboto Bold";
+  font-family: "Bookerly Display Bold";
 }
 
 a {
@@ -221,23 +255,28 @@ h1 {
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 2.25rem;
+    margin-left: 0 !important;
 }
 
 h3 {
-    font-size: 1.6rem;
+    font-size: 1.9rem;
+    margin-left: 0 !important;
 }
 
 h4 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
+    margin-left: 0 !important;
 }
 
 h5 {
-    font-size: 1rem;
+    font-size: 1.4rem;
+    margin-left: 0 !important;
 }
 
 h6 {
-    font-size: .9rem;
+    font-size: 1rem;
+    margin-left: 0 !important;
 }
 
 ul {
@@ -421,12 +460,12 @@ table th {
 .post-header .meta .date .rest {
     display: block;
     font-size: 0.80em;
-    font-family: "Roboto Slab Regular", serif;
+    font-family: "Bookerly Display Bold", serif;
 }
 
 .post-header h1.title {
     margin: -10px 0 0 0;
-    font-family: "Roboto Slab Regular", serif;
+    font-family: "Bookerly Display Bold", serif;
     font-weight: bold;
 }
 
@@ -436,7 +475,7 @@ table th {
 
 .post .title.small {
     margin: 0;
-    font-family: "Roboto Slab Regular", serif;
+    font-family: "Bookerly Display Bold", serif;
 }
 
 .post .draft-label {
@@ -520,7 +559,7 @@ table th {
 
 .page-title {
     font-weight: bold;
-    font-family: "Roboto Slab Regular", serif;
+    font-family: "Bookerly Display", serif;
     margin: -10px 0 30px 0;
 }
 
