--- a/static/css/Markdown.css
+++ b/static/css/Markdown.css
@@ -790,3 +790,13 @@ p code {
   unicode-bidi: plaintext;
   text-align: start;
 }
+
+p:not(:empty):first-of-type::first-letter {
+  float: left;
+  font-size: 5em;
+  line-height: 0.85;
+  margin: 0.1em 0.2em 0 0;
+  font-family: 'Cormorant', serif;
+  font-weight: normal;
+  text-indent: 0;
+}
