--- a/static/css/Markdown.css
+++ b/static/css/Markdown.css
@@ -793,11 +793,10 @@ p code {
 
 .markdown > p:not(:empty):first-of-type::first-letter {
   float: left;
-  font-size: 2em;
+  font-size: 3.3em;
   line-height: 1;
-  margin: 0.1em 0.1em 0.2em 0;
-  padding: 0.1em;
+  margin: 0.1em 0.2em 0 0;
   font-family: 'Cormorant', serif;
-  font-weight: bold;
+  font-weight: normal;
   text-indent: 0;
 }
