--- a/static/css/Markdown.css
+++ b/static/css/Markdown.css
@@ -793,10 +793,9 @@ p code {
 
 .markdown > p:not(:empty):first-of-type::first-letter {
   float: left;
-  font-size: 5em;
-  line-height: 0.85;
-  margin: 0.1em 0.2em 0 0;
+  font-size: 4em;
+  line-height: 0.8;
+  margin-right: 0.1em;
   font-family: 'Cormorant', serif;
   font-weight: normal;
-  text-indent: 0;
 }
