--- a/static/css/Markdown.css
+++ b/static/css/Markdown.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,900;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital@0;1&display=swap');
 
 @font-face {
   font-family: 'Bookerly Display';
@@ -793,9 +793,10 @@ p code {
 
 .markdown > p:not(:empty):first-of-type::first-letter {
   float: left;
-  font-size: 2em;
+  font-size: 3em;
   line-height: 1;
   margin-right: 0.1em;
+  margin-top: 0.05em;
   font-family: "Crimson Pro", serif;
-  font-weight: 900;
+  font-weight: normal;
 }
