--- a/layouts/_partials/comments/cusdis.html
+++ b/layouts/_partials/comments/cusdis.html
@@ -4,5 +4,6 @@
   data-page-id="{{ .Permalink }}"
   data-page-url="{{ .Permalink }}"
   data-page-title="{{ .Title }}"
+  data-theme="light"
 ></div>
 <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
