Yup that’s what I thought bitch now you gotta work fs

--- a/layouts/partials/single/footer.html
+++ b/layouts/partials/single/footer.html
@@ -1,4 +1,6 @@
-<section>
+{{ partial "single/footer.html" . }}
+
+<div>
 <script src="https://giscus.app/client.js"
         data-repo="ranhya/ranhya.github.io"
         data-repo-id="R_kgDOPM7Feg"
@@ -15,4 +17,4 @@
         crossorigin="anonymous"
         async>
 </script>
-</section>
+</div>
