--- a/layouts/partials/single/footer.html
+++ b/layouts/partials/single/footer.html
@@ -1,3 +1,6 @@
+{{ partial "/themes/typographical/single/footer.html" . }
+
+<section>
 <script src="https://giscus.app/client.js"
         data-repo="ranhya/ranhya.github.io"
         data-repo-id="R_kgDOPM7Feg"
@@ -14,3 +17,4 @@
         crossorigin="anonymous"
         async>
 </script>
+</section>
