--- a/layouts/partials/single/footer.html
+++ b/layouts/partials/single/footer.html
@@ -11,7 +11,7 @@
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="top"
-        data-theme="preferred_color_scheme"
+        data-theme="fro"
         data-lang="en"
         data-loading="lazy"
         crossorigin="anonymous"
