--- a/static/testing/styles.css
+++ b/static/testing/styles.css
@@ -38,6 +38,8 @@ header.hero-section {
   color: var(--hero-text);
   text-align: center;
   margin: 0 0 0;
+  width: 100%
+  height: 100%
 }
 
 header.hero-section h1 {
